# FlexCoderGUI

./: LICENSE  README.md  config.py  evaluator.py  flexcoder.py  flexcoder.yml  flexcoder_gui.py  generate.py  pyproject.toml  train.py
.github/workflows/: main.yml
docs/source/: conf.py  index.rst
gui/: base_option_list.py  data_content.py  data_display.py  data_option_list.py  synthesize_content.py  synthesize_display.py  synthesize_option_list.py  tab_bar.py  tab_content.py  train_content.py  train_display.py  train_option_list.py
src/: cache.py  composition.py  dataset.py  func_impl.py  function.py  generate_utils.py  grammar.py  input_.py  model.py  utils.py
test/: test_function.py
